# test-2-project

./: .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_docker_image.yml
src/test_project/: sample.py
tests/: test_sample.py
