[tool.poetry]
name = "test-2-project"
version = "0.1.0"
description = ""
authors = ["Pawel Wiszniewski <pawel.wiszniewski@goflink.com>"]
readme = "README.md"
packages = [{include = "test_2_project"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
